Fixed header not visible

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,7 @@
 #header {
   display:  block;
   position: fixed;
+  z-index: 1;
   width: 100%;
   height: 40px;
   top: 0;
